vfs_snapper: check for <linux/ioctl.h>

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Volker Lendecke <vl@samba.org>

Bug: https://bugzilla.samba.org/show_bug.cgi?id=10834

Autobuild-User(master): Volker Lendecke <vl@samba.org>
Autobuild-Date(master): Sun Nov  9 16:02:24 CET 2014 on sn-devel-104

(cherry picked from commit 5f68f7289c3028f50a449120cce000dcf40db788)